# JPEG_Compressor

./: .gitignore  README.md
backend/: package-lock.json  package.json  server.js
cpp-compressor/: CMakeLists.txt
cpp-compressor/include/: color.h  compressor.h  dct.h  filters.h  huffman.h  image_io.h  json_writer.h  metrics.h  quantization.h  rle.h  zigzag.h
cpp-compressor/src/: color.cpp  compressor.cpp  dct.cpp  filters.cpp  huffman.cpp  image_io.cpp  json_writer.cpp  main.cpp  metrics.cpp  quantization.cpp  rle.cpp  zigzag.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: BlockVisualizer.jsx  ImageCompare.jsx  MemoryLayoutExplanation.jsx  PerformancePanel.jsx  StatsPanel.jsx  UploadPanel.jsx
